# trading-bot-v2

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.ec2.yml  docker-compose.macbook.override.yml  docker-compose.paperclip.override.yml  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  deploy.yml
.omc/: project-memory.json
.omc/plans/: open-questions.md  (+1 more)
.serena/: project.yml
config/: accounts.yaml  base.yaml  channels.yaml  fundednext-comp.yaml  fundingpips-100k.yaml  fundingpips-10k.yaml  fundingpips-5k.yaml  fundingpips.yaml  news_calendar.csv  vantage-10k-demo.yaml  vantage-50.yaml
docs/: DEPLOYMENT-GUIDE.md  DEPLOYMENT_GUIDE.md  PROJECT_KNOWLEDGE.md  SCALPING_DEPLOYMENT.md  post-mortem-5k.md  strategy-guide.md
reports/: comparison_20260327_123142.html  comparison_20260327_135653.html  comparison_20260327_161333.html  master_dashboard_20260327_165750.html  master_dashboard_20260327_171816.html  propfirm_analysis.html
scripts/: analyze_trades.py  backtest.py  backtest_scalping.py  backtest_unified.py  bootstrap-mac.sh  deploy-propfirm.sh  deploy.sh  download_transcripts.sh  ec2-logs.sh  ec2-restart.sh  ec2-status.sh  fetch_extended_data.py  generate_propfirm_report.py  generate_report.py  healthcheck.sh  init_multi_tenant_schema.sql  local-start.sh  optimize_grid.py  optimize_scalping.py  retry_transcripts.sh  run.sh  run_all_backtests.sh  run_comprehensive_backtests.sh  run_full_matrix.py  run_multi_tenant_migration.py  run_propfirm_matrix.sh  start-mt5.sh  start-rpyc.sh  sweep_ny_orb.py
src/: main.py
src/core/: enums.py  (+3 more)
(+1433 files in other folders)
